# pyhandsontable

./: .gitattributes  .gitignore  .travis.yml  README.md  pyproject.toml
pyhandsontable/: __init__.py  app.py  core.py  pagination.py
pyhandsontable/templates/: handsontable.full.js  handsontable.full.min.js  sheet.html  sheet.js
tests/: test_generate.py
