[tool.poetry]
name = "pyhandsontable"
version = "0.1.7"
description = "Bring the power of Handsontable to Python and Jupyter Notebook"
authors = ["Pacharapol Withayasakpunt <patarapolw@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/patarapolw/pyhandsontable"
homepage = "https://github.com/patarapolw/pyhandsontable"
keywords = ['handsontable']

#include = ['pyhandsontable/templates/*']

[tool.poetry.dependencies]
python = ">=3.5"
jinja2 = "^2.10"
jupyter = "^1.0"
notebook = "^5.6"

[tool.poetry.dev-dependencies]
pytest = "^3.6"
